--- a/style.css
+++ b/style.css
@@ -15,5 +15,10 @@ body {
 }
 .principal {
     background-image: url("img/Background.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+.container {
+    height: 100vh;
 }
 
