--- a/style.css
+++ b/style.css
@@ -37,5 +37,12 @@ body {
 }
 .botao_secundario {
     background-color: transparent;
-    border: 2px solid var(--branco-principal)
+    border: 2px solid var(--branco-principal);
+    display: block;
+    text-decoration: none;
 }
+.container__aviso {
+    font-size: 12px;
+    color: var(--cinza-secundario);
+}
+
