--- a/style.css
+++ b/style.css
@@ -21,6 +21,8 @@ body {
     background-image: url("img/Background.png");
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
 }
 
 .container__botao {
@@ -50,4 +52,7 @@ body {
 
 .container__imagem {
     margin: 1em 0 2em 0;
+}
+.container__caixa {
+    margin: 0 6em;
 }
